--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,21 @@
 	<description>Projeto para o desafio avaliativo de 02/05.</description>
 	<properties>
 		<java.version>17</java.version>
+    	<aws.java.sdk.version>2.16.1</aws.java.sdk.version>
 	</properties>
+
+	  <dependencyManagement>
+	    <dependencies>
+	      <dependency>
+	        <groupId>software.amazon.awssdk</groupId>
+	        <artifactId>bom</artifactId>
+	        <version>2.16.1</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	    </dependencies>
+	  </dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,6 +51,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
+	<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -47,5 +66,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
