--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,21 @@
 			<scope>test</scope>
 		</dependency>
 	
-	<dependency>
+		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>s3</artifactId>
 		</dependency>
+
+		<dependency>
+		    <groupId>javax.persistence</groupId>
+		    <artifactId>javax.persistence-api</artifactId>
+		    </dependency>
+
+		<dependency>
+		   <groupId>org.springframework.data</groupId>
+		   <artifactId>spring-data-jpa</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
