--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		  </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
